--- a/WEB-CW/CSS/jobsearch.css
+++ b/WEB-CW/CSS/jobsearch.css
@@ -1,5 +1,3 @@
-/* Copy this to each page */
-
 body {
     font-family: 'Times New Roman', Times, serif;
 }
@@ -11,6 +9,15 @@ h2 {
     margin-right: auto;
     text-align: center;
 }
+
+h3{
+    background-color:white;
+    width: 10%;  
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -40,23 +47,53 @@ body {
     background-color: #14213D;
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #e5e5e5;
-    color: black;
-    text-align: center;
-}
 
 li a:hover {
     background-color: #111;
 }
 
-/* End */
+/* search stuff */
 
-#home_paragraph_1 {
+.contentArea {
+    display: block;
+    text-align: center;
+}
+
+form {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+ 
+label{
+    color: white;
+}
+
+input[type=text], select {
+    width: 20%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+
+button {
+    width: 10%;
+    background-color: #fca311;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+
+#alljobs{
     background-color: white;
     width: 25%;
     margin-left: auto;
@@ -64,7 +101,25 @@ li a:hover {
     text-align: center;
 }
 
-#home_paragraph_2 {
+/* End */
+
+
+
+
+.container {
+    width: 50%;
+}
+
+#jobsearch {
+    background-color: white;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#unisearch
+ {
     background-color: white;
     width: 25%;
     margin-left: auto;
