--- a/WEB-CW/CSS/jobsearch.css
+++ b/WEB-CW/CSS/jobsearch.css
@@ -101,6 +101,14 @@ button {
     text-align: center;
 }
 
+#singlejob{
+    background-color: white;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 /* End */
 
 
